add schedule list api
